Fix section content align

--- a/landing/static/style/landing.css
+++ b/landing/static/style/landing.css
@@ -105,6 +105,9 @@ section {
     height: 300px;
     padding-top: 20px;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 section:nth-of-type(odd) {
